Agregue una parrafo en la línea 13

--- a/hoja.html
+++ b/hoja.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Hola hola cocacola</h1>
   <h2>que tal?</h2>
+  <p>Estoy es un nuevo cambio</p>
 
 
   <script src="scrip.js"></script>
